Fixed navbar alignment

--- a/src/main/resources/static/static/css/demo.css
+++ b/src/main/resources/static/static/css/demo.css
@@ -9,7 +9,9 @@
     color: aqua;
     font-style: italic;
 }
-
+.nav-position{
+    position: relative;
+}
 .form-center{
     alignment: center;
 }
